# optpp

./: .project  CMakeLists.txt  Makefile.am  update.patch
config/: OPT++_config_cmake.h.in  optpp_options.m4
docs/guide/: tstgss.html  tstnpsol.html  tstpds.html  tsttrpds.html
include/: AppLauncher.h  Appl_Data.h  Appl_Data_NPSOL.h  BoolVector.h  CompoundConstraint.h  ConstraintBase.h  GenSetBase.h  GenSetBox2d.h  GenSetMin.h  GenSetStd.h  LSQNLF.h  NLF.h  NLFAPP.h  NLP.h  NLP0.h  NLP1.h  NLP2.h  NLPBase.h  NonLinearConstraint.h  Opt.h  OptBCFDNewton.h  OptBCNewton.h  OptBCNewtonLike.h  OptBCQNewton.h  OptConstrNewtonLike.h  OptGSS.h  OptLBFGS.h  OptNewtonLike.h  OptPDS.h  OptppBool.h  Problem.h  VariableList.h  cblas.h  globals.h  pds.h  proto.h
newmat11/: CMakeLists.txt  bandmat.C  cholesky.C  evalue.C  fft.C  garch.cpp  hholder.C  include.h  jacobi.C  myexcept.C  myexcept.h  newfft.C  newmat.h  newmat2.C  newmat8.C  newmatnl.C  newmatrm.C  nl_ex.cpp  precisio.h  svd.C
src/: CMakeLists.txt
src/Base/: Appl_Data.C  CMakeLists.txt  FDNLF1.C  LSQNLF.C  NLF0.C  NLF1.C  NLF2.C  NLP.C  NLP0.C  NLP1.C  TOLS.C  backtrack.C  dogleg.C  linesearch.C  mcsrch.C  trustpds.C  trustregion.C
src/Constraints/: CMakeLists.txt  CompoundConstraint.C  NonLinearConstraint.C
src/GA/: Makefile  README  eval.h  ga.C  optga.h  pga.c  pga.h  pga_util.c
src/GA/TESTING/: Makefile  dnumrec.c  eval.c  polymer.c  polymer.h  rosen.C  tstga.prof  vector.c  vector.h
src/GSS/: CMakeLists.txt  GenSetBase.C  GenSetBox2d.C  GenSetMin.C  GenSetStd.C  OptGSS.C
src/Newton/: CMakeLists.txt  OptBCEllipsoid.C  OptBCFDNewton.C  OptBCNewton.C  OptBCNewtonLike.C  OptBCQNewton.C  OptBaNewton.C  OptBaQNewton.C  OptCG.C  OptConstrFDNewton.C  OptConstrNewton.C  OptConstrNewtonLike.C  OptConstrQNewton.C  OptDHNIPS.C  OptFDNIPS.C  OptFDNewton.C  OptLBFGS.C  OptNIPS.C  OptNIPSLike.C  OptNewton.C  OptNewtonLike.C  OptQNIPS.C  OptQNewton.C
src/PDS/: CMakeLists.txt  create_scheme.C  pds.C  pdschk.C  pdscom.c  pdsdone.c  pdsget.c  pdshrk.c  pdsinit.C  pdsopt.C  pdsstep.C  pdswork.C  writes.c
src/UserInterface/: AppLauncher.C  FDNLF1APP.C  NIPSProblem.C  NLF0APP.C  NewtonProblem.C  Problem.C  VariableList.C  opt++.C
src/Utils/: CMakeLists.txt  OptppExceptions.C  OptppFatalError.C  file_cutils.c  mcholesky.C  timers.c
tests/: CMakeLists.txt
tests/constraints/: tstfcn.C
tests/hock/: hockfcns.C  tstfcn.C
tests/npsol/: illum.C  sixtyfive.C  tstillum.C  tstlinear.C  tstnonlinear.C  tstnpsol.C  tstrosen.C
tests/parallel/: tstGSS.C  tstfcn.C  tstfdnewtpds.C  tstnewtpds.C  tstpds.C  tsttrpds.C
tests/uncon/: ellipsoid.C  tstLBFGS.C  tstcg.C  tstfcn.C  tstfdnlf1.C  tstnewton.C  tstqnewton.C
tests/xml/: CMakeLists.txt  hockfcns.C  processTestResults.sh  rosen.C
